@@ -155,6 +155,9 @@ Toni <bleach at users dot sourceforge dot net>
 tyir <tyir at users dot sourceforge dot net>
   MPD features patch 1319461
 
+Vivenzio Pagliari <vivenzio@web.de>
+  Some useful patches for port monitoring
+
 Walt Nelson <wnelsonjr at comcast dot net>
   $freq fix
 
